--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "demo webapp for office",
     "main": "src/index.html",
     "dependencies": {
-        "jslint": "^0.12.1"
+        "jslint": "^0.12.1",
+        "typescript": "^4.3.2"
     },
     "devDependencies": {
         "jest": "^26.6.3"
